# nbmake

./: .buildinfo  .gitignore  .gitpod.dockerfile  .gitpod.yml  .pre-commit-config.yaml  CONTRIBUTING.MD  README.md  README.rst  SECURITY.md  _config.yml  _toc.yml  codecov.yml  genindex.html  landing-page.html  objects.inv  page1.html  publish  pyproject.toml  pyrightconfig.json  pytest.ini  requirements-dev.txt  requirements.txt  ruff.toml  search.html  searchindex.js  setup.py  typeshed
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/vm/: Dockerfile  devcontainer.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: publish-to-pypi-test.yml  publish-to-pypi.yml  pytest.yml  semgrep.yml  test-publish-to-pypi.yml
_sources/: landing-page.ipynb  page1.ipynb
devtools/: run_pyright
docs/: _config.yml  _toc.yml  landing-page.ipynb  landing-page.md  page1.ipynb
scripts/: init.sh
src/nbmake/: conf.py  helper.py  jupyter_book_adapter.py  jupyter_book_result.py  jupyter_book_run.py  metrics.py  nb_result.py  nb_run.py  nbmake_failure_repr.py  plugin.py  pytest_items.py  pytest_plugin.py  types.py  util.py  version.txt
src/nbmake/importchecker/: imports.py
src/nbmake/logs/: __init__.py  helpers.py
src/nbmake/runtime/: helper.py  run.py
src/nbmake/typestubs/_pytest/pytester/: __init__.pyi
src/nbmake/typestubs/nbformat/: __init__.pyi
src/nbmake/typestubs/nbformat/v4/: __init__.pyi
src/nbmake/typestubs/pydantic/: __init__.pyi
src/nbmake/typestubs/pytest/: __init__.pyi
tests/: helper.py  test_jupyter_book_run.py  test_nb_run.py  test_plugin.py  test_pytest_plugin.py
tests/bycell/: explicit_integration_test.py  nbt.ipynb  nbt.py  simple_integration_test.py
tests/bycells/: README.md  simple_integration_test.py
tests/resources/: _config.yml  _toc.yml  a_test.py  failing copy.ipynb  failing.ipynb  ignore_tag.ipynb  import_errs.ipynb  magic_error.ipynb  mock.ipynb  passing.ipynb  post_cell_execute.ipynb  post_cell_execute_error.ipynb  post_cell_execute_masked_error.ipynb  post_command.ipynb  post_command_error.ipynb  post_command_masked_error.ipynb  raises_tag.ipynb  usageerror.ipynb
tests/resources/_build/.jupyter_cache/: global.db
tests/resources/_build/.jupyter_cache/executed/726102ad6e8e5de13bfc8536b6164ab3/: base.ipynb
tests/test_cells/: nbt.ipynb  nbt.py
tests/test_nbmake/: test_jupyter_book_run.py
