[project]
name = "nbmake"
version = "1.5.4"
description = "Pytest plugin for testing notebooks"
authors = [
    {name = "alex-treebeard", email = "alex@treebeard.io"},
]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.8.0"
dependencies = [
    "pytest>=6.1.0",
    "nbclient>=0.6.6",
    "nbformat>=5.0.8",
    "Pygments>=2.7.3",
    "ipykernel>=5.4.0",
]

[project.entry-points.pytest11]
nbmake = "nbmake.pytest_plugin"

[project.urls]
Homepage = "https://github.com/treebeardtech/nbmake"

[build-system]
requires = ["setuptools>=65.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pre-commit>=3.5.0",
    "pytest-xdist>=3.6.1",
    "ruff>=0.8.4",
    "pytest>=8.1",
    "typing-extensions>=4.12.2",
]
