[project]
name = "nbmake"
version = "v1.5.5"
description = "Pytest plugin for testing notebooks"
authors = [
    {name = "alex-treebeard", email = "alex@treebeard.io"},
]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.8.0"
dependencies = [
    "pytest>=6.1.0",
    "nbclient>=0.6.6",
    "nbformat>=5.0.4",
    "Pygments>=2.7.3",
    "ipykernel>=5.4.0",
]

[project.entry-points.pytest11]
nbmake = "nbmake.pytest_plugin"

[project.urls]
Homepage = "https://github.com/treebeardtech/nbmake"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "hatchling>=1.27.0",
    "pre-commit>=3.5.0",
    "pytest-xdist>=3.6.1",
    "ruff>=0.8.4",
    "typing-extensions>=4.12.2",
]

# [[tool.uv.index]]
# url = "https://pypi.org/simple"
# default = true

# [[tool.uv.index]]
# name = "testpypi"
# url = "https://test.pypi.org/simple/"
# publish-url = "https://test.pypi.org/legacy/"